# esp32-crypto-api

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
components/CryptoAPI/: CMakeLists.txt
components/CryptoAPI/include/: CryptoAPI.h  CryptoApiCommons.h  ICryptoModule.h  MbedtlsModule.h  MicroeccModule.h  WolfsslModule.h
components/CryptoAPI/src/: CryptoAPI.cpp  CryptoApiCommons.cpp  MbedtlsModule.cpp  MicroeccModule.cpp  WolfsslModule.cpp
components/wolfssl/include/: user_settings.h
experiments/: Experimentos TCC.xlsx  test_strings_exact.h
main/: CMakeLists.txt  idf_component.yml  main.cpp
